--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browsersync": "0.0.1-security",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
+    "multer": "^1.4.2",
     "nunjucks": "^3.2.1",
     "pg": "^8.5.1"
   },
